@@ -184,6 +184,48 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|FixedBitSet
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|DocIterator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|SolrIndexSearcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|locationtech
 operator|.
 name|spatial4j
@@ -1038,82 +1080,6 @@ name|distErr
 argument_list|)
 expr_stmt|;
 block|}
-comment|// Turn docSet into Bits
-name|Bits
-name|topAcceptDocs
-decl_stmt|;
-if|if
-condition|(
-name|docSet
-operator|instanceof
-name|BitDocSet
-condition|)
-block|{
-name|BitDocSet
-name|set
-init|=
-operator|(
-name|BitDocSet
-operator|)
-name|docSet
-decl_stmt|;
-name|topAcceptDocs
-operator|=
-name|set
-operator|.
-name|getBits
-argument_list|()
-expr_stmt|;
-block|}
-else|else
-block|{
-name|topAcceptDocs
-operator|=
-operator|new
-name|Bits
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|boolean
-name|get
-parameter_list|(
-name|int
-name|index
-parameter_list|)
-block|{
-return|return
-name|docSet
-operator|.
-name|exists
-argument_list|(
-name|index
-argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|length
-parameter_list|()
-block|{
-return|return
-name|rb
-operator|.
-name|req
-operator|.
-name|getSearcher
-argument_list|()
-operator|.
-name|maxDoc
-argument_list|()
-return|;
-block|}
-block|}
-expr_stmt|;
-block|}
 comment|//Compute!
 specifier|final
 name|HeatmapFacetCounter
@@ -1141,8 +1107,19 @@ operator|.
 name|getTopReaderContext
 argument_list|()
 argument_list|,
-name|topAcceptDocs
+name|getTopAcceptDocs
+argument_list|(
+name|docSet
 argument_list|,
+name|rb
+operator|.
+name|req
+operator|.
+name|getSearcher
+argument_list|()
+argument_list|)
+argument_list|,
+comment|// turn DocSet into Bits
 name|boundsShape
 argument_list|,
 name|gridLevel
@@ -1347,6 +1324,129 @@ expr_stmt|;
 return|return
 name|result
 return|;
+block|}
+DECL|method|getTopAcceptDocs
+specifier|private
+specifier|static
+name|Bits
+name|getTopAcceptDocs
+parameter_list|(
+name|DocSet
+name|docSet
+parameter_list|,
+name|SolrIndexSearcher
+name|searcher
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|searcher
+operator|.
+name|getLiveDocs
+argument_list|()
+operator|==
+name|docSet
+condition|)
+block|{
+return|return
+literal|null
+return|;
+comment|// means match everything (all live docs). This can speedup things a lot.
+block|}
+elseif|else
+if|if
+condition|(
+name|docSet
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+operator|new
+name|Bits
+operator|.
+name|MatchNoBits
+argument_list|(
+name|searcher
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+return|;
+comment|// can speedup things a lot
+block|}
+elseif|else
+if|if
+condition|(
+name|docSet
+operator|instanceof
+name|BitDocSet
+condition|)
+block|{
+return|return
+operator|(
+operator|(
+name|BitDocSet
+operator|)
+name|docSet
+operator|)
+operator|.
+name|getBits
+argument_list|()
+return|;
+block|}
+else|else
+block|{
+comment|// TODO DocSetBase.calcBits ought to be at DocSet level?
+name|FixedBitSet
+name|bits
+init|=
+operator|new
+name|FixedBitSet
+argument_list|(
+name|searcher
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|DocIterator
+name|iter
+init|=
+name|docSet
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|bits
+operator|.
+name|set
+argument_list|(
+name|iter
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|bits
+return|;
+block|}
 block|}
 DECL|method|formatCountsAndAddToNL
 specifier|private
